--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "mongodb": "^6.17.0",
     "mysql2": "^3.14.2",
     "sequelize": "^6.37.7"
   }
