--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -13,8 +13,10 @@
   "description": "Server side for Riddles app",
   "dependencies": {
     "@supabase/supabase-js": "^2.52.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mysql2": "^3.14.2",
     "sequelize": "^6.37.7"
