--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "client",
+  "name": "riddles-client",
   "version": "1.0.0",
-  "description": "Client side for Riddles app",
+  "description": "client riddels",
   "main": "app.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "dev": "node --watch app.js"
+    "start": "node app.js"
   },
-  "keywords": ["riddles", "game", "client"],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "prompt-sync": "^4.2.0",
-    "readline-sync": "^1.4.10"
-  }
+    "prompt-sync": "^4.2.0"
+  },
+  "devDependencies": {},
+  "keywords": ["riddles", "game", "javascript", "client"],
+  "author": "",
+  "license": "ISC"
 }
