--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "server",
+  "name": "riddles-server",
   "version": "1.0.0",
   "main": "ServerApp.js",
+  "type": "module",
+  "description": "שרת משחק חידות",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --watch --env-file=.env ServerApp.js",
+    "start": "node ServerApp.js",
     "dev": "node --watch ServerApp.js"
   },
-  "author": "",
-  "type": "module",
-  "license": "ISC",
-  "description": "Server side for Riddles app",
   "dependencies": {
-    "@supabase/supabase-js": "^2.52.0",
-    "bcrypt": "^6.0.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
+    "dotenv": "^17.2.0",
+    "express": "^5.1.0", 
     "mongodb": "^6.17.0",
     "mysql2": "^3.14.2",
     "sequelize": "^6.37.7"
-  }
+  },
+  "keywords": ["riddles", "server", "express", "mongodb"],
+  "author": "",
+  "license": "ISC"
 }
