--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
-
 {
-  "name": "riddles-app",
+  "name": "riddles-game-project",
   "version": "1.0.0",
-  "description": "Riddles Client-Server Application",
+  "description": "giddels game project client and server",
+  "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "server": "cd server && npm run start",
-    "client": "cd client && npm run start",
-    "install-all": "npm install && cd server && npm install && cd ../client && npm install"
+    "install-all": "cd CLIENT && npm install && cd ../SERVER && npm install",
+    "start-client": "cd CLIENT && npm start",
+    "start-server": "cd SERVER && npm start",
+    "dev-server": "cd SERVER && npm run dev",
+    "start-both": "concurrently \"npm run start-server\" \"npm run start-client\""
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
-  }
+  },
+  "workspaces": [
+    "CLIENT",
+    "SERVER"
+  ],
+  "keywords": ["riddles", "game", "javascript", "fullstack"],
+  "author": "",
+  "license": "ISC"
 }
