--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -10,13 +10,20 @@
     "dev": "node --watch ServerApp.js"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.55.0",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
-    "express": "^5.1.0", 
+    "express": "^5.1.0",
     "mongodb": "^6.17.0",
     "mysql2": "^3.14.2",
     "sequelize": "^6.37.7"
   },
-  "keywords": ["riddles", "server", "express", "mongodb"],
+  "keywords": [
+    "riddles",
+    "server",
+    "express",
+    "mongodb"
+  ],
   "author": "",
   "license": "ISC"
 }
