--- a/SERVER/package.json
+++ b/SERVER/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.55.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mysql2": "^3.14.2",
     "sequelize": "^6.37.7"
